--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,6 +3,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: gray;
 }
 h1{
     font-size: 200px;
